implemented conceptual alignment auxiliary task in the image-text semantic similarity fine-tuning process for CLIP. added trainer, dataset and data loader classes. added bart module for text generation task. processed IU-Xray dataset and incorporated CheXpert into each report entry for enhanced training and evaluation.

--- a/notebooks/iu-xray-data-processing.ipynb
+++ b/notebooks/iu-xray-data-processing.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-02T16:47:54.087874Z",
-     "start_time": "2025-03-02T16:47:53.615461Z"
+     "end_time": "2025-03-09T10:30:41.154874Z",
+     "start_time": "2025-03-09T10:30:40.812838Z"
     }
    },
    "source": [
@@ -14,14 +14,14 @@
     "import matplotlib.image as mpimg"
    ],
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 2
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-02T16:48:50.496995Z",
-     "start_time": "2025-03-02T16:48:50.336620Z"
+     "end_time": "2025-03-09T10:30:44.076035Z",
+     "start_time": "2025-03-09T10:30:44.059412Z"
     }
    },
    "source": [
@@ -50,8 +50,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-02T16:48:52.524501Z",
-     "start_time": "2025-03-02T16:48:52.518339Z"
+     "end_time": "2025-03-09T10:12:15.560827Z",
+     "start_time": "2025-03-09T10:12:15.552691Z"
     }
    },
    "cell_type": "code",
@@ -192,19 +192,19 @@
        "</div>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 4
+   "execution_count": 3
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-19T23:03:25.043414Z",
-     "start_time": "2025-02-19T23:03:25.039914Z"
+     "end_time": "2025-03-09T10:12:24.242127Z",
+     "start_time": "2025-03-09T10:12:24.239282Z"
     }
    },
    "source": "print(reports.loc[291])",
@@ -213,20 +213,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "uid                                                                302\n",
-      "MeSH                                                    Scoliosis/mild\n",
-      "Problems                                                     Scoliosis\n",
-      "image                                        Xray Chest PA and Lateral\n",
-      "indication                                    XXXX-year-old male, pain\n",
-      "comparison                                                         NaN\n",
-      "findings             Heart size within normal limits, stable medias...\n",
-      "impression                                           No acute findings\n",
-      "Report Impression    Heart size within normal limits, stable medias...\n",
+      "uid                                                         302\n",
+      "MeSH                                             Scoliosis/mild\n",
+      "Problems                                              Scoliosis\n",
+      "image                                 Xray Chest PA and Lateral\n",
+      "indication                             XXXX-year-old male, pain\n",
+      "comparison                                                  NaN\n",
+      "findings      Heart size within normal limits, stable medias...\n",
+      "impression                                    No acute findings\n",
       "Name: 291, dtype: object\n"
      ]
     }
    ],
-   "execution_count": 13
+   "execution_count": 4
   },
   {
    "cell_type": "code",
@@ -384,19 +383,153 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-19T22:42:01.908742Z",
-     "start_time": "2025-02-19T22:42:01.881834Z"
+     "end_time": "2025-03-09T10:28:43.061015Z",
+     "start_time": "2025-03-09T10:28:42.902338Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "reports['Report Impression'] = reports['findings'].fillna('') + ' ' + reports['impression'].fillna('')\n",
-    "report_impressions = reports[['Report Impression']]\n",
+    "reports['Report Impression'] = reports['findings'] + ' ' + reports['impression']\n",
     "\n",
-    "report_impressions.to_csv(f'{DATA_PATH}/indiana_impressions.csv', index=False)"
+    "impressions = reports[['uid', 'Report Impression']].copy()\n",
+    "impressions.to_csv(f'{DATA_PATH}/indiana_impressions.csv', index=False)"
+   ],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "   uid                                  Report Impression\n",
+       "0    1  The cardiac silhouette and mediastinum size ar...\n",
+       "1    2  Borderline cardiomegaly. Midline sternotomy XX...\n",
+       "2    3   No displaced rib fractures, pneumothorax, or ...\n",
+       "3    4  There are diffuse bilateral interstitial and a...\n",
+       "4    5  The cardiomediastinal silhouette and pulmonary..."
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>uid</th>\n",
+       "      <th>Report Impression</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>The cardiac silhouette and mediastinum size ar...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Borderline cardiomegaly. Midline sternotomy XX...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>No displaced rib fractures, pneumothorax, or ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>There are diffuse bilateral interstitial and a...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>The cardiomediastinal silhouette and pulmonary...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 12
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-09T10:53:21.487968Z",
+     "start_time": "2025-03-09T10:53:21.305164Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "labels = pd.read_csv(f'{DATA_PATH}/indiana_labels.csv')\n",
+    "labels.rename(columns={'Report Impression': 'report'}, inplace=True)\n",
+    "labels = labels[['uid', 'report', 'Atelectasis', 'Cardiomegaly', 'Consolidation', 'Edema', 'Enlarged Cardiomediastinum', 'Fracture', 'Lung Lesion', 'Lung Opacity', 'No Finding', 'Pleural Effusion', 'Pleural Other', 'Pneumonia', 'Pneumothorax', 'Support Devices']]\n",
+    "labels.to_csv(f'{DATA_PATH}/indiana_labels.csv', index=False)"
    ],
    "outputs": [],
-   "execution_count": 5
+   "execution_count": 8
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-09T11:01:02.261394Z",
+     "start_time": "2025-03-09T11:01:02.257975Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "label_columns = labels.columns[2:]\n",
+    "labels[label_columns] = labels[label_columns].fillna(0)\n",
+    "encodings = labels[label_columns].values"
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0. 0. 0. 0. 0. 0. 0. 0. 1. 0. 0. 0. 0. 0.]\n"
+     ]
+    }
+   ],
+   "execution_count": 13
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-09T11:07:46.641603Z",
+     "start_time": "2025-03-09T11:07:46.637949Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "labels = labels[labels['uid'] == 1]\n",
+    "label_values = labels.iloc[:, 2:].values[0]\n",
+    "print(label_values)"
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0. 0. 0. 0. 0. 0. 0. 0. 1. 0. 0. 0. 0. 0.]\n"
+     ]
+    }
+   ],
+   "execution_count": 16
   },
   {
    "metadata": {
