multi task clip encoder experiment. poor results obtained, looking to refactor. modified text decoder to use pretrained BART for conditional generation based on image embeddings as hidden states.

--- a/notebooks/clip-cxr-fine-tuning.ipynb
+++ b/notebooks/clip-cxr-fine-tuning.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-03-30T13:34:25.208607Z",
-     "start_time": "2025-03-30T13:34:23.355010Z"
+     "end_time": "2025-04-06T15:41:41.916369Z",
+     "start_time": "2025-04-06T15:41:40.012078Z"
     }
    },
    "source": [
@@ -25,8 +25,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-30T13:34:25.214888Z",
-     "start_time": "2025-03-30T13:34:25.213254Z"
+     "end_time": "2025-04-06T15:41:42.652792Z",
+     "start_time": "2025-04-06T15:41:42.649866Z"
     }
    },
    "cell_type": "code",
@@ -45,28 +45,40 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-30T13:34:26.516896Z",
-     "start_time": "2025-03-30T13:34:25.279643Z"
+     "end_time": "2025-04-06T15:41:55.395916Z",
+     "start_time": "2025-04-06T15:41:53.889463Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "model, preprocess = clip.load(VIT_TYPE, load_from_clip=True)\n",
+    "model, preprocess = clip.load(\"ViT-B/32\", load_from_clip=True, extended_context=False)\n",
     "\n",
     "input_resolution = model.visual.input_resolution\n",
     "context_length = model.context_length\n",
     "extended_context_length = model.extended_context_length\n",
     "vocab_size = model.vocab_size\n",
     "\n",
-    "# print(\"Model parameters:\", f\"{np.sum([int(np.prod(p.shape)) for p in model.parameters()]):,}\")\n",
-    "# print(\"Input resolution:\", input_resolution)\n",
-    "# print(\"Original context length:\", context_length)\n",
-    "# print(\"Extended context length:\", extended_context_length)\n",
-    "# print(\"Vocab size:\", vocab_size)"
+    "print(\"Model parameters:\", f\"{np.sum([int(np.prod(p.shape)) for p in model.parameters()]):,}\")\n",
+    "print(\"Input resolution:\", input_resolution)\n",
+    "print(\"Original context length:\", context_length)\n",
+    "print(\"Extended context length:\", extended_context_length)\n",
+    "print(\"Vocab size:\", vocab_size)"
    ],
    "id": "47cf3c675b9dded9",
-   "outputs": [],
-   "execution_count": 3
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model parameters: 151,685,391\n",
+      "Input resolution: 224\n",
+      "Original context length: 77\n",
+      "Extended context length: 248\n",
+      "Vocab size: 49408\n"
+     ]
+    }
+   ],
+   "execution_count": 4
   },
   {
    "metadata": {
