--- a/notebooks/clip-radiology-retrieval.ipynb
+++ b/notebooks/clip-radiology-retrieval.ipynb
@@ -18,7 +18,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "from PIL import Image\n",
-    "\n",
+    "from constants import DATASETS_PATH\n",
     "clip.available_models()"
    ],
    "outputs": [
@@ -176,7 +176,7 @@
    },
    "cell_type": "code",
    "source": [
-    "DATA_PATH = '/Volumes/T7 Shield/datasets/iu-xray'\n",
+    "DATA_PATH = DATASETS_PATH['iu-xray']\n",
     "\n",
     "reports = pd.read_csv(f'{DATA_PATH}/indiana_reports.csv')\n",
     "projections = pd.read_csv(f'{DATA_PATH}/indiana_projections.csv')\n",
@@ -212,7 +212,7 @@
    },
    "cell_type": "code",
    "source": [
-    "DATA_PATH = '/Volumes/T7 Shield/datasets/iu-xray'\n",
+    "DATA_PATH = DATASETS_PATH['iu-xray']\n",
     "\n",
     "reports = pd.read_csv(f'{DATA_PATH}/indiana_reports.csv')\n",
     "projections = pd.read_csv(f'{DATA_PATH}/indiana_projections.csv')\n",
