added support for MIMIC-CXR dataset, for both local and S3 bucket sources. CLIP experiment in both InfoNCE and soft contrastive loss training settings, none lead to promising results yet. refactored model and trainer. adapted evaluation metrics.

--- a/notebooks/iu-xray-data-processing.ipynb
+++ b/notebooks/iu-xray-data-processing.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-06T10:42:11.399938Z",
-     "start_time": "2025-04-06T10:42:10.647604Z"
+     "end_time": "2025-04-07T19:21:19.547866Z",
+     "start_time": "2025-04-07T19:21:18.317739Z"
     }
    },
    "source": [
@@ -13,6 +13,7 @@
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.image as mpimg\n",
     "\n",
+    "from PIL import Image\n",
     "from utils.preprocessor import IUXrayPreprocessor\n",
     "from constants import DATASETS_PATH, CHEXPERT_LABELS\n",
     "from sklearn.model_selection import train_test_split"
@@ -23,14 +24,14 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-06T10:42:12.102834Z",
-     "start_time": "2025-04-06T10:42:12.100063Z"
+     "end_time": "2025-04-07T19:21:37.545356Z",
+     "start_time": "2025-04-07T19:21:37.543617Z"
     }
    },
    "cell_type": "code",
    "source": "DATA_PATH = DATASETS_PATH['iu-xray']",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 3
   },
   {
    "cell_type": "code",
@@ -360,16 +361,23 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-16T11:34:42.296957Z",
-     "start_time": "2025-03-16T11:34:42.003622Z"
+     "end_time": "2025-04-07T19:21:40.095765Z",
+     "start_time": "2025-04-07T19:21:39.776720Z"
     }
    },
    "source": [
     "view1_path = f'{DATA_PATH}/images/images_normalized/1_IM-0001-3001.dcm.png'\n",
     "view2_path = f'{DATA_PATH}/images/images_normalized/1_IM-0001-4001.dcm.png'\n",
     "\n",
+    "def get_image_size(image_path: str):\n",
+    "    with Image.open(image_path) as img:\n",
+    "        return img.size\n",
+    "\n",
     "view1 = mpimg.imread(view1_path)\n",
     "view2 = mpimg.imread(view2_path)\n",
+    "\n",
+    "print(f\"View 1 size: {get_image_size(view1_path)}\")\n",
+    "print(f\"View 2 size: {get_image_size(view2_path)}\")\n",
     "\n",
     "fig, ax = plt.subplots(1, 2, figsize=(10, 5))\n",
     "ax[0].imshow(view1, cmap='gray')\n",
@@ -382,6 +390,14 @@
    ],
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "View 1 size: (2048, 2496)\n",
+      "View 2 size: (2496, 2048)\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
        "<Figure size 1000x500 with 2 Axes>"
@@ -392,7 +408,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 8
+   "execution_count": 4
   },
   {
    "metadata": {
@@ -940,7 +956,7 @@
     "test_split = iu_xray[iu_xray['split'] == 'test']\n",
     "test_split.to_csv(f'{DATA_PATH}/processed/iu_xray_test.csv', index=False)\n",
     "\n",
-    "iu_xray.to_csv(f'{DATA_PATH}/processed/iu_xray_full.csv', index=False)\n",
+    "iu_xray.to_csv(f'{DATA_PATH}/processed/iu_xray_processed.csv', index=False)\n",
     "\n",
     "print(\"Splits saved successfully\")"
    ],
