--- a/notebooks/mimic-cxr-data-processing.ipynb
+++ b/notebooks/mimic-cxr-data-processing.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-04-10T19:09:20.093435Z",
-     "start_time": "2025-04-10T19:09:18.314472Z"
+     "end_time": "2025-04-16T21:39:45.196408Z",
+     "start_time": "2025-04-16T21:39:43.604380Z"
     }
    },
    "source": [
@@ -22,13 +22,13 @@
     "from constants import DATASETS_PATH, CHEXPERT_LABELS"
    ],
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-10T19:09:20.650929Z",
-     "start_time": "2025-04-10T19:09:20.648760Z"
+     "end_time": "2025-04-16T21:39:46.606969Z",
+     "start_time": "2025-04-16T21:39:46.603388Z"
     }
    },
    "cell_type": "code",
@@ -39,7 +39,7 @@
    ],
    "id": "c0069c62478e3201",
    "outputs": [],
-   "execution_count": 4
+   "execution_count": 2
   },
   {
    "metadata": {},
@@ -5274,8 +5274,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-10T19:26:48.772573Z",
-     "start_time": "2025-04-10T19:26:48.770391Z"
+     "end_time": "2025-04-16T21:39:51.501357Z",
+     "start_time": "2025-04-16T21:39:51.498945Z"
     }
    },
    "cell_type": "code",
@@ -5292,7 +5292,7 @@
    ],
    "id": "40aa543046b65c7c",
    "outputs": [],
-   "execution_count": 32
+   "execution_count": 3
   },
   {
    "metadata": {
@@ -5322,8 +5322,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-10T19:26:54.456052Z",
-     "start_time": "2025-04-10T19:26:54.451326Z"
+     "end_time": "2025-04-16T21:39:53.880061Z",
+     "start_time": "2025-04-16T21:39:53.874707Z"
     }
    },
    "cell_type": "code",
@@ -5365,7 +5365,7 @@
    ],
    "id": "359ea4374edbc6d8",
    "outputs": [],
-   "execution_count": 33
+   "execution_count": 4
   },
   {
    "metadata": {
@@ -5490,6 +5490,32 @@
     }
    ],
    "execution_count": 34
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-16T22:19:59.409675Z",
+     "start_time": "2025-04-16T21:39:58.072197Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "RESIZED_IMAGES_PATH = os.path.join(DATA_PATH, 'images-normalized')\n",
+    "resize_and_save_images(os.path.join(DATA_PATH, 'images'), RESIZED_IMAGES_PATH, new_size=(1024, 1024), p_folders_to_process=['p17'])\n",
+    "resized_size_gb = get_mimic_split_size(RESIZED_IMAGES_PATH)\n",
+    "print(f\"Resized size: {resized_size_gb:.2f} GB\")"
+   ],
+   "id": "a7d1ec2f691a46b1",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Resized size: 24.54 GB\n"
+     ]
+    }
+   ],
+   "execution_count": 5
   },
   {
    "metadata": {},
