revamped BLIP pretrain pipeline and fine-tuning for report generation. added CXR-PRO reports support for preprocessor and data loaders, alongside improved transforms applied on images and generated captions from labels for further experiments. other small code improvements.

--- a/notebooks/chexpert-multi-label-classifier.ipynb
+++ b/notebooks/chexpert-multi-label-classifier.ipynb
@@ -13,10 +13,9 @@
    "source": [
     "import clip\n",
     "import argparse\n",
-    "import numpy as np\n",
     "\n",
-    "from loaders import CxrDataLoader\n",
-    "from datasets import _build_iu_xray_sampler\n",
+    "from data.loaders import CxrDataLoader\n",
+    "from data.datasets import _build_iu_xray_sampler\n",
     "from classifier.model import ChexpertXRClassifier\n",
     "from classifier.trainer import ChexpertClassifierTrainer"
    ],
