--- a/notebooks/clip-cxr-generation-demo.ipynb
+++ b/notebooks/clip-cxr-generation-demo.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "from bart.model import CLIP2BARTModel\n",
     "from bart.trainer import VisionBartTrainer\n",
-    "from loaders import CxrDataLoader\n",
+    "from data.loaders import CxrDataLoader\n",
     "from transformers import BartConfig\n",
     "from torchvision import transforms"
    ],
