--- a/notebooks/clip-cxr-pre-training.ipynb
+++ b/notebooks/clip-cxr-pre-training.ipynb
@@ -16,7 +16,7 @@
     "import numpy as np\n",
     "\n",
     "from clip.trainer import CLIPTrainer\n",
-    "from loaders import CxrDataLoader"
+    "from data.loaders import CxrDataLoader"
    ],
    "outputs": [
     {
