--- a/notebooks/clip-xr-pretrain-demo.ipynb
+++ b/notebooks/clip-xr-pretrain-demo.ipynb
@@ -19,11 +19,10 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from PIL import Image\n",
     "from torchvision import transforms\n",
     "\n",
     "from constants import CHEXPERT_LABELS\n",
-    "from loaders import CxrDataLoader"
+    "from data.loaders import CxrDataLoader"
    ],
    "outputs": [],
    "execution_count": 2
