added CXR-CLIP inspired implementation for language-image pretraining and classification finetuning experiments. removed obsolete code. improved structure.

--- a/notebooks/blip-cxr-pre-training.ipynb
+++ b/notebooks/blip-cxr-pre-training.ipynb
@@ -34,7 +34,8 @@
     "import argparse\n",
     "\n",
     "from blip.pretrain import BLIPTrainer\n",
-    "from data.loaders import CxrDataLoader, TransformBuilder"
+    "from data.loaders import CxrDataLoader\n",
+    "from utils.transforms import TransformBuilder"
    ],
    "id": "a468787f9554e68a",
    "outputs": [],
