--- a/notebooks/blip-pretrain-demo.ipynb
+++ b/notebooks/blip-pretrain-demo.ipynb
@@ -20,7 +20,8 @@
     "\n",
     "import seaborn as sns\n",
     "from matplotlib import pyplot as plt\n",
-    "from data.loaders import CxrDataLoader, TransformBuilder"
+    "from data.loaders import CxrDataLoader\n",
+    "from utils.transforms import TransformBuilder"
    ],
    "outputs": [],
    "execution_count": 1
