--- a/notebooks/mimic-cxr-data-processing.ipynb
+++ b/notebooks/mimic-cxr-data-processing.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-04-27T14:40:03.312226Z",
-     "start_time": "2025-04-27T14:40:03.238683Z"
+     "end_time": "2025-05-04T10:36:48.517637Z",
+     "start_time": "2025-05-04T10:36:46.294220Z"
     }
    },
    "source": [
@@ -22,13 +22,13 @@
     "from constants import DATASETS_PATH, CHEXPERT_LABELS"
    ],
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-27T14:40:12.687504Z",
-     "start_time": "2025-04-27T14:40:12.685242Z"
+     "end_time": "2025-05-04T10:36:49.694465Z",
+     "start_time": "2025-05-04T10:36:49.692142Z"
     }
    },
    "cell_type": "code",
@@ -39,13 +39,282 @@
    ],
    "id": "c0069c62478e3201",
    "outputs": [],
-   "execution_count": 4
+   "execution_count": 3
   },
   {
    "metadata": {},
    "cell_type": "markdown",
    "source": "## MIMIC Dataset inspection & preprocessing",
    "id": "3d7bc90e2837f77a"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-04T10:36:51.423191Z",
+     "start_time": "2025-05-04T10:36:51.033975Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "metadata = pd.read_csv(os.path.join(DATA_PATH, 'mimic-cxr-2.0.0-metadata.csv.gz'), compression='gzip')\n",
+    "print(\"Number of samples: \" + str(len(metadata)))\n",
+    "metadata.head(n=10)"
+   ],
+   "id": "b0d15f35c8436f8b",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of samples: 377110\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "                                       dicom_id  subject_id  study_id  \\\n",
+       "0  02aa804e-bde0afdd-112c0b34-7bc16630-4e384014    10000032  50414267   \n",
+       "1  174413ec-4ec4c1f7-34ea26b7-c5f994f8-79ef1962    10000032  50414267   \n",
+       "2  2a2277a9-b0ded155-c0de8eb9-c124d10e-82c5caab    10000032  53189527   \n",
+       "3  e084de3b-be89b11e-20fe3f9f-9c8d8dfe-4cfd202c    10000032  53189527   \n",
+       "4  68b5c4b1-227d0485-9cc38c3f-7b84ab51-4b472714    10000032  53911762   \n",
+       "5  fffabebf-74fd3a1f-673b6b41-96ec0ac9-2ab69818    10000032  53911762   \n",
+       "6  ea030e7a-2e3b1346-bc518786-7a8fd698-f673b44c    10000032  56699142   \n",
+       "7  096052b7-d256dc40-453a102b-fa7d01c6-1b22c6b4    10000764  57375967   \n",
+       "8  b79e55c3-735ce5ac-64412506-cdc9ea79-f1af521f    10000764  57375967   \n",
+       "9  dcfeeac4-1597e318-d0e6736a-8b2c2238-47ac3f1b    10000764  57375967   \n",
+       "\n",
+       "  PerformedProcedureStepDescription ViewPosition  Rows  Columns  StudyDate  \\\n",
+       "0                CHEST (PA AND LAT)           PA  3056     2544   21800506   \n",
+       "1                CHEST (PA AND LAT)      LATERAL  3056     2544   21800506   \n",
+       "2                CHEST (PA AND LAT)           PA  3056     2544   21800626   \n",
+       "3                CHEST (PA AND LAT)      LATERAL  3056     2544   21800626   \n",
+       "4               CHEST (PORTABLE AP)           AP  2705     2539   21800723   \n",
+       "5               CHEST (PORTABLE AP)           AP  2906     2258   21800723   \n",
+       "6               CHEST (PORTABLE AP)           AP  3056     2544   21800805   \n",
+       "7                CHEST (PA AND LAT)           AP  2544     3056   21321015   \n",
+       "8                CHEST (PA AND LAT)      LATERAL  3056     2544   21321015   \n",
+       "9                CHEST (PA AND LAT)      LATERAL  3056     2544   21321015   \n",
+       "\n",
+       "    StudyTime ProcedureCodeSequence_CodeMeaning ViewCodeSequence_CodeMeaning  \\\n",
+       "0  213014.531                CHEST (PA AND LAT)             postero-anterior   \n",
+       "1  213014.531                CHEST (PA AND LAT)                      lateral   \n",
+       "2  165500.312                CHEST (PA AND LAT)             postero-anterior   \n",
+       "3  165500.312                CHEST (PA AND LAT)                      lateral   \n",
+       "4   80556.875               CHEST (PORTABLE AP)             antero-posterior   \n",
+       "5   80556.875               CHEST (PORTABLE AP)             antero-posterior   \n",
+       "6  234424.765               CHEST (PORTABLE AP)             antero-posterior   \n",
+       "7   84047.984                CHEST (PA AND LAT)             antero-posterior   \n",
+       "8   84047.984                CHEST (PA AND LAT)                      lateral   \n",
+       "9   84047.984                CHEST (PA AND LAT)                      lateral   \n",
+       "\n",
+       "  PatientOrientationCodeSequence_CodeMeaning  \n",
+       "0                                      Erect  \n",
+       "1                                      Erect  \n",
+       "2                                      Erect  \n",
+       "3                                      Erect  \n",
+       "4                                        NaN  \n",
+       "5                                      Erect  \n",
+       "6                                        NaN  \n",
+       "7                                      Erect  \n",
+       "8                                      Erect  \n",
+       "9                                      Erect  "
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>dicom_id</th>\n",
+       "      <th>subject_id</th>\n",
+       "      <th>study_id</th>\n",
+       "      <th>PerformedProcedureStepDescription</th>\n",
+       "      <th>ViewPosition</th>\n",
+       "      <th>Rows</th>\n",
+       "      <th>Columns</th>\n",
+       "      <th>StudyDate</th>\n",
+       "      <th>StudyTime</th>\n",
+       "      <th>ProcedureCodeSequence_CodeMeaning</th>\n",
+       "      <th>ViewCodeSequence_CodeMeaning</th>\n",
+       "      <th>PatientOrientationCodeSequence_CodeMeaning</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>02aa804e-bde0afdd-112c0b34-7bc16630-4e384014</td>\n",
+       "      <td>10000032</td>\n",
+       "      <td>50414267</td>\n",
+       "      <td>CHEST (PA AND LAT)</td>\n",
+       "      <td>PA</td>\n",
+       "      <td>3056</td>\n",
+       "      <td>2544</td>\n",
+       "      <td>21800506</td>\n",
+       "      <td>213014.531</td>\n",
+       "      <td>CHEST (PA AND LAT)</td>\n",
+       "      <td>postero-anterior</td>\n",
+       "      <td>Erect</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>174413ec-4ec4c1f7-34ea26b7-c5f994f8-79ef1962</td>\n",
+       "      <td>10000032</td>\n",
+       "      <td>50414267</td>\n",
+       "      <td>CHEST (PA AND LAT)</td>\n",
+       "      <td>LATERAL</td>\n",
+       "      <td>3056</td>\n",
+       "      <td>2544</td>\n",
+       "      <td>21800506</td>\n",
+       "      <td>213014.531</td>\n",
+       "      <td>CHEST (PA AND LAT)</td>\n",
+       "      <td>lateral</td>\n",
+       "      <td>Erect</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2a2277a9-b0ded155-c0de8eb9-c124d10e-82c5caab</td>\n",
+       "      <td>10000032</td>\n",
+       "      <td>53189527</td>\n",
+       "      <td>CHEST (PA AND LAT)</td>\n",
+       "      <td>PA</td>\n",
+       "      <td>3056</td>\n",
+       "      <td>2544</td>\n",
+       "      <td>21800626</td>\n",
+       "      <td>165500.312</td>\n",
+       "      <td>CHEST (PA AND LAT)</td>\n",
+       "      <td>postero-anterior</td>\n",
+       "      <td>Erect</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>e084de3b-be89b11e-20fe3f9f-9c8d8dfe-4cfd202c</td>\n",
+       "      <td>10000032</td>\n",
+       "      <td>53189527</td>\n",
+       "      <td>CHEST (PA AND LAT)</td>\n",
+       "      <td>LATERAL</td>\n",
+       "      <td>3056</td>\n",
+       "      <td>2544</td>\n",
+       "      <td>21800626</td>\n",
+       "      <td>165500.312</td>\n",
+       "      <td>CHEST (PA AND LAT)</td>\n",
+       "      <td>lateral</td>\n",
+       "      <td>Erect</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>68b5c4b1-227d0485-9cc38c3f-7b84ab51-4b472714</td>\n",
+       "      <td>10000032</td>\n",
+       "      <td>53911762</td>\n",
+       "      <td>CHEST (PORTABLE AP)</td>\n",
+       "      <td>AP</td>\n",
+       "      <td>2705</td>\n",
+       "      <td>2539</td>\n",
+       "      <td>21800723</td>\n",
+       "      <td>80556.875</td>\n",
+       "      <td>CHEST (PORTABLE AP)</td>\n",
+       "      <td>antero-posterior</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>fffabebf-74fd3a1f-673b6b41-96ec0ac9-2ab69818</td>\n",
+       "      <td>10000032</td>\n",
+       "      <td>53911762</td>\n",
+       "      <td>CHEST (PORTABLE AP)</td>\n",
+       "      <td>AP</td>\n",
+       "      <td>2906</td>\n",
+       "      <td>2258</td>\n",
+       "      <td>21800723</td>\n",
+       "      <td>80556.875</td>\n",
+       "      <td>CHEST (PORTABLE AP)</td>\n",
+       "      <td>antero-posterior</td>\n",
+       "      <td>Erect</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>ea030e7a-2e3b1346-bc518786-7a8fd698-f673b44c</td>\n",
+       "      <td>10000032</td>\n",
+       "      <td>56699142</td>\n",
+       "      <td>CHEST (PORTABLE AP)</td>\n",
+       "      <td>AP</td>\n",
+       "      <td>3056</td>\n",
+       "      <td>2544</td>\n",
+       "      <td>21800805</td>\n",
+       "      <td>234424.765</td>\n",
+       "      <td>CHEST (PORTABLE AP)</td>\n",
+       "      <td>antero-posterior</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>096052b7-d256dc40-453a102b-fa7d01c6-1b22c6b4</td>\n",
+       "      <td>10000764</td>\n",
+       "      <td>57375967</td>\n",
+       "      <td>CHEST (PA AND LAT)</td>\n",
+       "      <td>AP</td>\n",
+       "      <td>2544</td>\n",
+       "      <td>3056</td>\n",
+       "      <td>21321015</td>\n",
+       "      <td>84047.984</td>\n",
+       "      <td>CHEST (PA AND LAT)</td>\n",
+       "      <td>antero-posterior</td>\n",
+       "      <td>Erect</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>b79e55c3-735ce5ac-64412506-cdc9ea79-f1af521f</td>\n",
+       "      <td>10000764</td>\n",
+       "      <td>57375967</td>\n",
+       "      <td>CHEST (PA AND LAT)</td>\n",
+       "      <td>LATERAL</td>\n",
+       "      <td>3056</td>\n",
+       "      <td>2544</td>\n",
+       "      <td>21321015</td>\n",
+       "      <td>84047.984</td>\n",
+       "      <td>CHEST (PA AND LAT)</td>\n",
+       "      <td>lateral</td>\n",
+       "      <td>Erect</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>dcfeeac4-1597e318-d0e6736a-8b2c2238-47ac3f1b</td>\n",
+       "      <td>10000764</td>\n",
+       "      <td>57375967</td>\n",
+       "      <td>CHEST (PA AND LAT)</td>\n",
+       "      <td>LATERAL</td>\n",
+       "      <td>3056</td>\n",
+       "      <td>2544</td>\n",
+       "      <td>21321015</td>\n",
+       "      <td>84047.984</td>\n",
+       "      <td>CHEST (PA AND LAT)</td>\n",
+       "      <td>lateral</td>\n",
+       "      <td>Erect</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 4
   },
   {
    "metadata": {
