--- a/notebooks/blip-report-generation.ipynb
+++ b/notebooks/blip-report-generation.ipynb
@@ -18,7 +18,8 @@
     "import argparse\n",
     "\n",
     "from blip.train_generation import BLIPReportGenTrainer\n",
-    "from data.loaders import CxrDataLoader, TransformBuilder"
+    "from data.loaders import CxrDataLoader\n",
+    "from utils.transforms import TransformBuilder"
    ],
    "outputs": [],
    "execution_count": 1
