improved CXR-CLIP implementation with soft contrastive loss + MVS pretrain paradigm, classifier finetuning and prompt-guided text decoder generation. added trainers for all modules. implemented demo inference api for app integration.

--- a/notebooks/cxr-clip-pre-training.ipynb
+++ b/notebooks/cxr-clip-pre-training.ipynb
@@ -20,8 +20,7 @@
     "from cxrclip import build_model\n",
     "from cxrclip.loss import build_loss\n",
     "from data import load_tokenizer\n",
-    "from cxrclip.pretrain import CXRCLIPTrainer\n",
-    "from cxrclip.finetune import CXRClassifierTrainer\n",
+    "from cxrclip.pretrain import CxrCLIPTrainer\n",
     "from data.loaders import CxrDataLoader\n",
     "from constants import CHEXPERT_LABELS"
    ],
@@ -71,11 +70,9 @@
    },
    "cell_type": "code",
    "source": [
-    "# model_config = yaml.load(open(\"../configs/model/clip_swin_clinical.yaml\"), Loader=yaml.FullLoader)\n",
-    "model_config = yaml.load(open(\"../configs/model/swin_classification.yaml\"), Loader=yaml.FullLoader)\n",
-    "# loss_config = yaml.load(open(\"../configs/loss/contrastive.yaml\"), Loader=yaml.FullLoader)\n",
-    "loss_config = yaml.load(open(\"../configs/loss/classification.yaml\"), Loader=yaml.FullLoader)\n",
-    "model = build_model(model_config, loss_config, tokenizer, use_custom=True)\n",
+    "model_config = yaml.load(open(\"../configs/model/clip_swin_clinical.yaml\"), Loader=yaml.FullLoader)\n",
+    "loss_config = yaml.load(open(\"../configs/loss/contrastive.yaml\"), Loader=yaml.FullLoader)\n",
+    "model = build_model(model_config, loss_config, tokenizer)\n",
     "loss_fn = build_loss(loss_config)"
    ],
    "id": "da3caa7d6649040a",
@@ -116,11 +113,9 @@
    },
    "cell_type": "code",
    "source": [
-    "# checkpoint_path = \"./output/swint_mc.tar\"\n",
-    "checkpoint_path = \"./output/cxr_clip_best_retrieval.pt\"\n",
+    "checkpoint_path = \"./output/swint_mc.tar\"\n",
     "checkpoint = torch.load(checkpoint_path, map_location=\"cpu\", weights_only=False)\n",
-    "# model.load_state_dict(checkpoint[\"model_state_dict\"])\n",
-    "print(checkpoint[\"model_state_dict\"].keys())"
+    "# model.load_state_dict(checkpoint[\"model\"])"
    ],
    "id": "87c71f5465d9c2d2",
    "outputs": [
@@ -218,7 +213,7 @@
    },
    "cell_type": "code",
    "source": [
-    "trainer = CXRCLIPTrainer(\n",
+    "trainer = CxrCLIPTrainer(\n",
     "    model=model,\n",
     "    config=train_config,\n",
     "    loss_fn=loss_fn,\n",
@@ -240,37 +235,6 @@
     }
    ],
    "execution_count": 6
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-05-13T19:37:07.914852Z",
-     "start_time": "2025-05-13T19:37:07.907434Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "trainer = CXRClassifierTrainer(\n",
-    "    model=model,\n",
-    "    config=train_config,\n",
-    "    loss_fn=loss_fn,\n",
-    "    train_loader=dataloaders[\"train\"],\n",
-    "    val_loader=dataloaders[\"val\"],\n",
-    "    mixed_precision=False\n",
-    ")"
-   ],
-   "id": "2d659c505795fcb1",
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-05-13 22:37:07,913 - INFO - Total parameters: 27,530,120\n",
-      "2025-05-13 22:37:07,913 - INFO - Trainable parameters: 10,766 (0.04%)\n"
-     ]
-    }
-   ],
-   "execution_count": 7
   },
   {
    "metadata": {
