improved training pipelines. added comprehensive evaluation module for each configuration and task.

--- a/notebooks/blip-pretrain-demo.ipynb
+++ b/notebooks/blip-pretrain-demo.ipynb
@@ -39,7 +39,7 @@
     "# MODEL_PATH = os.path.join(CHECKPOINT_PATH, 'checkpoint-14000.pt')\n",
     "MODEL_PATH = os.path.join(CHECKPOINT_PATH, 'blip_cxr_pretrain_test_split_best_retrieval.pt')\n",
     "\n",
-    "config_path = '../configs/pretrain.yaml'\n",
+    "config_path = '../configs/baselines/pretrain.yaml'\n",
     "pretrain_config = yaml.load(open(config_path), Loader=yaml.Loader)\n",
     "\n",
     "args = argparse.Namespace(\n",
